Try to fix home visibility for login and register

--- a/src/scss/_nav-menu.scss
+++ b/src/scss/_nav-menu.scss
@@ -9,6 +9,7 @@
   align-items: flex-end;
   position: relative;
   padding-top: 50px;
+  z-index: 1;
 }
 .nav-user {
   display: flex;
